--- a/home.html
+++ b/home.html
@@ -1,1 +1,11 @@
-<p>je suis un test</p>
+<html>
+<head>
+  <link rel="stylesheet" type="text/css" href="assets/css/home.css" />
+</head>
+<body id="home">
+  <div class="container">
+
+    <p>bonjour</p>
+  </div>
+</body>
+</html>
