modification top bar

--- a/home.html
+++ b/home.html
@@ -1,11 +1,26 @@
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" href="assets/css/home.css" />
+  <meta charset="UTF-8">
+  <html lang="fr"></html>
+  <link rel="stylesheet" type="text/css" href="assets/css/home.css"  />
+  <script src="home.js"></script>
+  <title>Home</title>
 </head>
 <body id="home">
-  <div class="container">
+  <div class="topbar">
 
-    <p>bonjour</p>
+    <div class="topbar-img">
+      <img src="assets/Images/logo-vetisio.png">
+    </div>
+
+    <div class="topbar-list">
+      <ul>
+        <li><a href="#" class="decouvrir">Découvrir</a></li>
+        <li><a href="#" class="connecter">Se connecter</a></li>
+      </ul>
+    </div>
+
   </div>
 </body>
 </html>
+<!DOCTYPE html>
