Home page terminée

--- a/home.html
+++ b/home.html
@@ -7,8 +7,8 @@
   <title>Home</title>
 </head>
 <body id="home">
-  <div class="topbar">
 
+  <div class="topbar">
     <div class="topbar-img">
       <img src="assets/Images/logo-vetisio.png">
     </div>
@@ -19,8 +19,18 @@
         <li><a href="#" class="connecter">Se connecter</a></li>
       </ul>
     </div>
-
   </div>
+
+  <div class="main">
+    <h1>
+      VOUS VOUS APPRÊTEZ <br> À PRENDRE SOIN <br> DE VOTRE <span class="animal">ANIMAL</span>
+    </h1>
+  </div>
+
+  <div class="button">
+    <a href="#" class="start">Commencer</a>
+  </div>
+
 </body>
 </html>
 <!DOCTYPE html>
