Suite de la Discover page jusqu'au derniers inscrits

--- a/discover.html
+++ b/discover.html
@@ -31,7 +31,7 @@
   </div>
 
   <div class="img-dogs">
-    <img src="/Users/antoinecaby/Documents/VetisioCSS/assets/Images/DeuxChiens.jpeg" class="twoDogs">
+    <img src="assets/Images/DeuxChiens.jpeg" class="twoDogs">
   </div>
 
   <div class="phraseaccroche">
@@ -41,13 +41,68 @@
   </div>
 
   <div class="services">
+
     <div class="title-services">
       <h3>Nos services</h3>
     </div>
+
     <div class="phrase-services">
       <p>Lorem ipsum dolor sit amet. Et error nihil ea ipsum laudantium</p>
     </div>
+
     <div class="list-services">
+
+      <div class="diffservices separateur">
+        <ul>
+          <li></li>
+          <li class="diffservices-title"><h3>Sercice 1</h3></li>
+          <li class="diffservices-text">Lorem ipsum dolor sit amet. Non magnam totam qui modi ipsam nisi unde aut maxime ullam aut exercitationem inventore sit ipsam tempora et recusandae iste. Id suscipit incidunt est nemo quaerat At placeat repellendus qui enim assumenda vel sequi commodi.</li>
+        </ul>
+      </div>
+
+      <div class="diffservices separateur">
+        <ul>
+          <li></li>
+          <li class="diffservices-title"><h3>Sercice 2</h3></li>
+          <li class="diffservices-text">Lorem ipsum dolor sit amet. Non magnam totam qui modi ipsam nisi unde aut maxime ullam aut exercitationem inventore sit ipsam tempora et recusandae iste. Id suscipit incidunt est nemo quaerat At placeat repellendus qui enim assumenda vel sequi commodi.</li>
+        </ul>
+      </div>
+
+      <div class="diffservices separateur">
+        <ul>
+          <li></li>
+          <li class="diffservices-title"><h3>Sercice 3</h3></li>
+          <li class="diffservices-text">Lorem ipsum dolor sit amet. Non magnam totam qui modi ipsam nisi unde aut maxime ullam aut exercitationem inventore sit ipsam tempora et recusandae iste. Id suscipit incidunt est nemo quaerat At placeat repellendus qui enim assumenda vel sequi commodi.</li>
+        </ul>
+      </div>
+
+      <div class="diffservices ">
+        <ul>
+          <li></li>
+          <li class="diffservices-title"><h3>Sercice 4</h3></li>
+          <li class="diffservices-text">Lorem ipsum dolor sit amet. Non magnam totam qui modi ipsam nisi unde aut maxime ullam aut exercitationem inventore sit ipsam tempora et recusandae iste. Id suscipit incidunt est nemo quaerat At placeat repellendus qui enim assumenda vel sequi commodi.</li>
+        </ul>
+      </div>
+
+    </div>
+
+    <div class="button-services">
+      <a href=">">Commencer</a>
+    </div>
+  </div>
+
+  <div class="submit">
+    <div class="submit-title">
+        <h3>Nos derniers inscrits</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis, lectus magna fringilla urna, porttitor rhoncus dolor purus non enim praesent elem</p>
+    </div>
+    <div class="submit-badge">
+
+    </div>
+    <div class="submit-image">
+
+    </div>
+    <div class="sumbit-text">
 
     </div>
   </div>
