Modifications jusqu'a la newsletter

--- a/discover.html
+++ b/discover.html
@@ -30,16 +30,14 @@
     </div>
   </div>
 
-  <div class="img-dogs">
-    <img src="assets/Images/DeuxChiens.jpeg" class="twoDogs">
+  <div class="phraseaccroche-background">
+    <div class="phraseaccroche">
+      <h3 class="phraseaccroche-title">Phrase d'accroche</h3>
+      <p class="phraseaccroche-text">Lorem ipsum dolor sit amet. Et error nihil ea ipsum laudantium <br> in rerum veritatis non quisquam rerum sit autem aperiam qui vitae commodi. <br> Lorem ipsum dolor sit amet. Et error nihil ea ipsum laudantium <br> in rerum veritatis non quisquam rerum sit autem aperiam qui vitae commodi.</p>
+      <a href="#" class="phraseaccroche-start">Commencer</a>
+    </div>
   </div>
-
-  <div class="phraseaccroche">
-    <h3 class="phraseaccroche-title">Phrase d'accroche</h3>
-    <p class="phraseaccroche-text">Lorem ipsum dolor sit amet. Et error nihil ea ipsum laudantium <br> in rerum veritatis non quisquam rerum sit autem aperiam qui vitae commodi. <br> Lorem ipsum dolor sit amet. Et error nihil ea ipsum laudantium <br> in rerum veritatis non quisquam rerum sit autem aperiam qui vitae commodi.</p>
-    <a href="#" class="phraseaccroche-start">Commencer</a>
-  </div>
-
+  
   <div class="services">
 
     <div class="title-services">
@@ -135,6 +133,17 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis, lectus magna fringilla urna, porttitor rhoncus dolor purus non enim praesent elem</p>
       <img src="assets/Images/client.jpeg">
     </div>
+    <div class="clients-commentaire2">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis, lectus magna fringilla urna, porttitor rhoncus dolor purus non enim praesent elem</p>
+      <img src="assets/Images/client.jpeg">
+    </div>
+    <div class="clients-commentaire3">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis, lectus magna fringilla urna, porttitor rhoncus dolor purus non enim praesent elem</p>
+      <img src="assets/Images/client.jpeg">
+    </div>
+  </div>
+  <div class="newsletter">
+    <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h3>
   </div>
 </body>
 </html>
