Discover page terminée

--- a/discover.html
+++ b/discover.html
@@ -144,6 +144,52 @@
   </div>
   <div class="newsletter">
     <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h3>
+    <form action=">">
+      <ul>
+        <li><input type="text" placeholder="Entrez votre mail" class="newsletter-textfield"></li>
+        <li><input type="submit" value="Rejoignez-nous !" class="newsletter-submit"></li>
+      </ul>
+    </form>
+  </div>
+  <div class="contact">
+    <div class="contact-box">
+      <div class="contact-content">
+        <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, <br> purus sit amet luctus venenatis, lectus magna fringilla urna, porttitor <br> rhoncus dolor purus non enim praesent elem</p>
+      </div>
+      <div class="contact-form">
+        <form action="#">
+          <div class="first-input">
+            <input type="text" id="name" name="name" class="contact-form-name" placeholder="Nom et prénom">
+        </div>
+        <div class="second-input">
+            <input type="email" id="mail" name="mail" class="contact-form-mail" placeholder="Email">
+        </div>
+        <div class="third-input">
+            <textarea id="msg" name="message" class="contact-form-textarea" placeholder="Message"></textarea>
+        </div>
+        <div class="fourth-input">
+          <input type="submit" name="submit" class="contact-form-submit" placeholder="Envoyer">
+        </div>
+        </form>
+      </div>
+    </div>
+  </div>
+  <div class="footer">
+    <hr>
+    <div class="footer-content">
+      <div class="footer-img">
+        <img src="assets/Images/logo-vetisio.png">
+      </div>
+      <div class="footer-menu">
+        <ul>
+          <li>Conseils</li>
+          <li>Services</li>
+          <li>Boutique</li>
+          <li>Spécialistes</li>
+        </ul>
+      </div>
+    </div>
   </div>
 </body>
 </html>
