Discover page terminée et création de la page de connexion

--- a/discover.html
+++ b/discover.html
@@ -15,6 +15,9 @@
 <!-- Nos services : Grid en 4 parties avec des bordures a droites pour faires les démarquations -->
 <!-- Nos derniers inscrits : Grid en 2 X 2 parties -->
 <!-- FAQ'S : grid en 2 parties, une pour les questions et l'autre pour le text -->
+<!-- Commentaires clients : grid en 4 parties 2X2 -->
+<!-- Newsletter : Titre et texte simple -->
+<!-- Contact : Grid en 2 parties, une pour le texte et l'autre pour le formulaire -->
 
   <div class="topbar">
 
