Connexion page terminée

--- a/discover.html
+++ b/discover.html
@@ -14,10 +14,7 @@
 <!-- Box avec phrase d'acroche : surrélever avec un top négatif ou margin négatif -->
 <!-- Nos services : Grid en 4 parties avec des bordures a droites pour faires les démarquations -->
 <!-- Nos derniers inscrits : Grid en 2 X 2 parties -->
-<!-- FAQ'S : grid en 2 parties, une pour les questions et l'autre pour le text -->
-<!-- Commentaires clients : grid en 4 parties 2X2 -->
-<!-- Newsletter : Titre et texte simple -->
-<!-- Contact : Grid en 2 parties, une pour le texte et l'autre pour le formulaire -->
+<!-- FAQ'S : grid en 2 parties -->
 
   <div class="topbar">
 
@@ -33,14 +30,16 @@
     </div>
   </div>
 
-  <div class="phraseaccroche-background">
-    <div class="phraseaccroche">
-      <h3 class="phraseaccroche-title">Phrase d'accroche</h3>
-      <p class="phraseaccroche-text">Lorem ipsum dolor sit amet. Et error nihil ea ipsum laudantium <br> in rerum veritatis non quisquam rerum sit autem aperiam qui vitae commodi. <br> Lorem ipsum dolor sit amet. Et error nihil ea ipsum laudantium <br> in rerum veritatis non quisquam rerum sit autem aperiam qui vitae commodi.</p>
-      <a href="#" class="phraseaccroche-start">Commencer</a>
-    </div>
+  <div class="img-dogs">
+    <img src="assets/Images/DeuxChiens.jpeg" class="twoDogs">
   </div>
-  
+
+  <div class="phraseaccroche">
+    <h3 class="phraseaccroche-title">Phrase d'accroche</h3>
+    <p class="phraseaccroche-text">Lorem ipsum dolor sit amet. Et error nihil ea ipsum laudantium <br> in rerum veritatis non quisquam rerum sit autem aperiam qui vitae commodi. <br> Lorem ipsum dolor sit amet. Et error nihil ea ipsum laudantium <br> in rerum veritatis non quisquam rerum sit autem aperiam qui vitae commodi.</p>
+    <a href="#" class="phraseaccroche-start">Commencer</a>
+  </div>
+
   <div class="services">
 
     <div class="title-services">
@@ -55,7 +54,7 @@
 
       <div class="diffservices separateur">
         <ul>
-          <li><img src="assets/Images/chienHerbe.png" class="diffservices-img"></li>
+          <li></li>
           <li class="diffservices-title"><h3>Sercice 1</h3></li>
           <li class="diffservices-text">Lorem ipsum dolor sit amet. Non magnam totam qui modi ipsam nisi unde aut maxime ullam aut exercitationem inventore sit ipsam tempora et recusandae iste. Id suscipit incidunt est nemo quaerat At placeat repellendus qui enim assumenda vel sequi commodi.</li>
         </ul>
@@ -63,7 +62,7 @@
 
       <div class="diffservices separateur">
         <ul>
-          <li><img src="assets/Images/chienHerbe.png" class="diffservices-img"></li>
+          <li></li>
           <li class="diffservices-title"><h3>Sercice 2</h3></li>
           <li class="diffservices-text">Lorem ipsum dolor sit amet. Non magnam totam qui modi ipsam nisi unde aut maxime ullam aut exercitationem inventore sit ipsam tempora et recusandae iste. Id suscipit incidunt est nemo quaerat At placeat repellendus qui enim assumenda vel sequi commodi.</li>
         </ul>
@@ -71,7 +70,7 @@
 
       <div class="diffservices separateur">
         <ul>
-          <li><img src="assets/Images/chienHerbe.png" class="diffservices-img"></li>
+          <li></li>
           <li class="diffservices-title"><h3>Sercice 3</h3></li>
           <li class="diffservices-text">Lorem ipsum dolor sit amet. Non magnam totam qui modi ipsam nisi unde aut maxime ullam aut exercitationem inventore sit ipsam tempora et recusandae iste. Id suscipit incidunt est nemo quaerat At placeat repellendus qui enim assumenda vel sequi commodi.</li>
         </ul>
@@ -79,7 +78,7 @@
 
       <div class="diffservices ">
         <ul>
-          <li><img src="assets/Images/chienHerbe.png" class="diffservices-img"></li>
+          <li></li>
           <li class="diffservices-title"><h3>Sercice 4</h3></li>
           <li class="diffservices-text">Lorem ipsum dolor sit amet. Non magnam totam qui modi ipsam nisi unde aut maxime ullam aut exercitationem inventore sit ipsam tempora et recusandae iste. Id suscipit incidunt est nemo quaerat At placeat repellendus qui enim assumenda vel sequi commodi.</li>
         </ul>
@@ -88,111 +87,25 @@
     </div>
 
     <div class="button-services">
-      <a href="#">Commencer</a>
+      <a href=">">Commencer</a>
     </div>
   </div>
 
   <div class="submit">
     <div class="submit-title">
-      <h3>Nos derniers inscrits</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis, lectus magna fringilla urna, porttitor rhoncus dolor purus non enim praesent elem</p>
+        <h3>Nos derniers inscrits</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis, lectus magna fringilla urna, porttitor rhoncus dolor purus non enim praesent elem</p>
     </div>
     <div class="submit-badge">
-      <ul>
-        <li><img src="assets/Images/chienHerbe.png" class="submit-badge-img"></li>
-        <li><img src="assets/Images/chienHerbe.png" class="submit-badge-img"></li>
-        <li><img src="assets/Images/chienHerbe.png" class="submit-badge-img"></li>
-      </ul>
 
     </div>
     <div class="submit-image">
-      <img src="assets/Images/chienCours.jpeg">
+
     </div>
-    <div class="submit-text">
-      <h3>Titre 01</h3>
-      <p>Lorem ipsum dolor sit amet. Et error nihil ea ipsum laudantium in rerum veritatis non quisquam rerum sit autem aperiam qui vitae commodi. Lorem ipsum dolor sit amet. Et error nihil ea ipsum laudantium in rerum veritatis non quisquam rerum sit autem aperiam qui vitae commodi.</p>
+    <div class="sumbit-text">
+
     </div>
   </div>
 
-  <div class="faq">
-    <div class="faq-questions">
-      <ul>
-        <li><p>Lorem ipsumdolor sit amet. Aut ipsam perspiciatis id veritatis iure et ?</p></li>
-        <li><p>Lorem ipsum dolor sit amet. Aut ipsam perspiciatis id veritatis iure et ?</p></li>
-        <li><p>Lorem ipsum dolor sit amet. Aut ipsam perspiciatis id veritatis iure et ?</p></li>
-      </ul>
-    </div>
-    <div class="faq-text">
-      <h3>Faq's</h3>
-      <p>Lorem ipsum dolor sit amet. Et error nihil ea ipsum laudantium <br> Lorem ipsum dolor sit amet. Et error nihil ea ipsum laudantium</p>
-    </div>
-  </div>
-  <div class="clients">
-    <div class="clients-title">
-      <h3>De vraies histoires de vrais clients</h3>
-      <p>Laissez-vous inspirer par ces histoires.</p>
-    </div>
-    <div class="clients-commentaire">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis, lectus magna fringilla urna, porttitor rhoncus dolor purus non enim praesent elem</p>
-      <img src="assets/Images/client.jpeg">
-    </div>
-    <div class="clients-commentaire2">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis, lectus magna fringilla urna, porttitor rhoncus dolor purus non enim praesent elem</p>
-      <img src="assets/Images/client.jpeg">
-    </div>
-    <div class="clients-commentaire3">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis, lectus magna fringilla urna, porttitor rhoncus dolor purus non enim praesent elem</p>
-      <img src="assets/Images/client.jpeg">
-    </div>
-  </div>
-  <div class="newsletter">
-    <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h3>
-    <form action=">">
-      <ul>
-        <li><input type="text" placeholder="Entrez votre mail" class="newsletter-textfield"></li>
-        <li><input type="submit" value="Rejoignez-nous !" class="newsletter-submit"></li>
-      </ul>
-    </form>
-  </div>
-  <div class="contact">
-    <div class="contact-box">
-      <div class="contact-content">
-        <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, <br> purus sit amet luctus venenatis, lectus magna fringilla urna, porttitor <br> rhoncus dolor purus non enim praesent elem</p>
-      </div>
-      <div class="contact-form">
-        <form action="#">
-          <div class="first-input">
-            <input type="text" id="name" name="name" class="contact-form-name" placeholder="Nom et prénom">
-        </div>
-        <div class="second-input">
-            <input type="email" id="mail" name="mail" class="contact-form-mail" placeholder="Email">
-        </div>
-        <div class="third-input">
-            <textarea id="msg" name="message" class="contact-form-textarea" placeholder="Message"></textarea>
-        </div>
-        <div class="fourth-input">
-          <input type="submit" name="submit" class="contact-form-submit" placeholder="Envoyer">
-        </div>
-        </form>
-      </div>
-    </div>
-  </div>
-  <div class="footer">
-    <hr>
-    <div class="footer-content">
-      <div class="footer-img">
-        <img src="assets/Images/logo-vetisio.png">
-      </div>
-      <div class="footer-menu">
-        <ul>
-          <li>Conseils</li>
-          <li>Services</li>
-          <li>Boutique</li>
-          <li>Spécialistes</li>
-        </ul>
-      </div>
-    </div>
-  </div>
 </body>
 </html>
