--- a/connexion.html
+++ b/connexion.html
@@ -6,10 +6,17 @@
   <script src="connexion.js"></script>
   <title>Connexion</title>
 </head>
+
+<!-- Topbar habituelle -->
+<!-- Connexion : Grid en deux parties, d'un côté le formulaire de connexion et de l'autre, le texte. -->
+
 <body id="connexion">
     <div class="topbar">
         <div class="topbar-logo">
             <img src="assets/Images/logo-vetisio.png">
+        </div>
+        <div class="topbar-img">
+          <img src="assets/Images/FemmeEtChiens.png">
         </div>
     </div>
     <div class="espaceconnexion">
@@ -21,16 +28,24 @@
                 <br>
                 <input type="text" id="mail" name="mail" placeholder="mail@example.com" class="mail-input">
                 <br>
-                <label for="password" class="password-label">password</label>
+                <label for="password" class="password-label">Password</label>
                 <br>
                 <input type="password" id="maiml" name="mail" placeholder="**********" class="password-input">
+                <br>
+                <label for="remind-me" class="remind-me-label">Rester connecté</label>
+                <br>
+                <input type="checkbox" id="checkbox" name="checkbox">
+                <label for="checkbox" class="remind-me-label-2">Se souvenir de moi</label>
+                <br>
+                <br>
+                <input type="submit" id="submit" name="submit" class="submit-input" value="Connexion">
             </form>
         </div>
         <div class="espaceconnexion2">
             <h3>Lorem ipsum dolor sit amet</h3>
             <p>In search for cute little puppy, Captain Sem has come back from his tragic death. With his hogwarts certified power he promise to be a hero for all of ghostkind.</p>
         </div>
-        
+
     </div>
 </body>
 </html>
