suite recapWelcome page
git add .

--- a/recapWelcome.html
+++ b/recapWelcome.html
@@ -33,10 +33,59 @@
         </div>
     </div>
     <div class="proches">
-
+      <h3>Proches</h3>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit</p>
+      <div class="proches-list">
+        <div class="proches-infos">
+          <h4>Nom et prénom</h4>
+          <p>4 animaux</p>
+          <p class="lien">Propriétaire</p>
+        </div>
+        <div class="proches-infos">
+          <h4>Nom et prénom</h4>
+          <p>4 animaux</p>
+          <p class="lien">Propriétaire</p>
+        </div>
+        <div class="proches-infos">
+          <h4>Nom et prénom</h4>
+          <p>4 animaux</p>
+          <p class="lien">Propriétaire</p>
+        </div>
+        <div class="proches-infos">
+          <h4>Nom et prénom</h4>
+          <p>4 animaux</p>
+          <p class="lien">Propriétaire</p>
+        </div>
+        <div class="proches-infos">
+          <h4>Nom et prénom</h4>
+          <p>4 animaux</p>
+          <p class="lien">Propriétaire</p>
+        </div>
+        <div class="proches-infos">
+          <h4>Nom et prénom</h4>
+          <p>4 animaux</p>
+          <p class="lien">Propriétaire</p>
+        </div>
+        <div class="proches-infos">
+          <h4>Nom et prénom</h4>
+          <p>4 animaux</p>
+          <p class="lien">Propriétaire</p>
+        </div>
+        <div class="proches-infos">
+          <h4>Nom et prénom</h4>
+          <p>4 animaux</p>
+          <p class="lien">Propriétaire</p>
+        </div>
+      </div>
     </div>
     <div class="specialistes">
-
+      <h3>Spécialiste</h3>
+      <p>C’est facile ! Nos experts vous apportent un conseil  personnalisé.</p>
+      <div class="specialistes-list">
+        <div class="specialistes-infos">
+          
+        </div>
+      </div>
     </div>
   </div>
 </body>
