--- a/recapWelcome.html
+++ b/recapWelcome.html
@@ -80,10 +80,28 @@
     </div>
     <div class="specialistes">
       <h3>Spécialiste</h3>
-      <p>C’est facile ! Nos experts vous apportent un conseil  personnalisé.</p>
+      <p class="subtitle">C’est facile ! Nos experts vous apportent un conseil  personnalisé.</p>
       <div class="specialistes-list">
         <div class="specialistes-infos">
-          
+          <img src="/Users/monmacbook/Documents/vetisio-css/assets/Images/specialiste.png" class="specialistes-img">
+          <div class="specialistes-infos-background">
+            <p class="specialiste-name">Angélique Dupont</p>
+            <p class="specialiste-profession">Vétérinaire</p>
+          </div>
+        </div>
+        <div class="specialistes-infos">
+          <img src="/Users/monmacbook/Documents/vetisio-css/assets/Images/specialiste.png" class="specialistes-img">
+          <div class="specialistes-infos-background">
+            <p class="specialiste-name">Angélique Dupont</p>
+            <p class="specialiste-profession">Vétérinaire</p>
+          </div>
+        </div>
+        <div class="specialistes-infos">
+          <img src="/Users/monmacbook/Documents/vetisio-css/assets/Images/specialiste.png" class="specialistes-img">
+          <div class="specialistes-infos-background">
+            <p class="specialiste-name">Angélique Dupont</p>
+            <p class="specialiste-profession">Vétérinaire</p>
+          </div>
         </div>
       </div>
     </div>
