Page de conseils terminée

--- a/conseils.html
+++ b/conseils.html
@@ -29,7 +29,7 @@
       </div>
   </div>
   <div class="conseil-badge">
-    <h3>Nos conseils pour <b>Rosco</b></h3>
+    <h3 class="title">Nos conseils pour <b>Rosco</b></h3>
     <div class="badge-list">
         <div class="conseil-badge-left">
             <div class="badge-simple">
@@ -49,16 +49,93 @@
                     <img src="/Users/monmacbook/Documents/vetisio-css/assets/Images/sthetoscope.png">
                 </div>
                 <div class="badge-description">
-                    <h3>Male castré</h3>
+                    <h3>Environnement</h3>
                     <p>Consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan</p>
                 </div>
             </div>
         </div>
         <div class="conseil-badge-right">
-            <p>typesetting</p>
+          <div class="badge-2">
+            <div class="badge-2-img">
+                <img src="/Users/monmacbook/Documents/vetisio-css/assets/Images/sthetoscope.png">
+            </div>
+            <div class="badge-description">
+                <h3>3 ans</h3>
+                <p>Consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan</p>
+            </div>
+          </div>
+          <div class="badge-1">
+            <div class="badge-1-img">
+                <img src="/Users/monmacbook/Documents/vetisio-css/assets/Images/sthetoscope.png">
+            </div>
+            <div class="badge-description">
+                <h3>Saison</h3>
+                <p>Consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan</p>
+            </div>
+        </div>
+          <div class="badge-2">
+            <div class="badge-2-img">
+                <img src="/Users/monmacbook/Documents/vetisio-css/assets/Images/sthetoscope.png">
+            </div>
+            <div class="badge-description">
+                <h3>Antécédant</h3>
+                <p>Consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan</p>
+            </div>
+        </div>
+
         </div>
     </div>
-    
+  </div>
+  <div class="experts">
+    <div class="expert-card">
+      <div class="expert-card-img">
+        <img src="/Users/monmacbook/Documents/vetisio-css/assets/Images/expert.png">
+      </div>
+      <div class="expert-card-text">
+        <h3>Ariana Louise</h3>
+        <p class="expert-card-text-profession">Caroline SMITH, spécialiste du sommeil chez les chiens.</p>
+        <p class="expert-card-text-profession2">Docteur</p>
+        <hr>
+        <a href="#">Contacter</a>
+      </div>
+    </div>
+    <div class="expert-card2">
+      <div class="expert-card2-img">
+        <img src="/Users/monmacbook/Documents/vetisio-css/assets/Images/contact.png">
+      </div>
+      <div class="expert-card2-text">
+        <p>UNE QUESTION ? UN EXPERT VOUS APPELLE IMMÉDIATEMENT POUR VOUS AIDER</p>
+      </div>
+    </div>
+    <div class="expert-card">
+      <div class="expert-card-img">
+        <img src="/Users/monmacbook/Documents/vetisio-css/assets/Images/expert.png">
+      </div>
+      <div class="expert-card-text">
+        <h3>Ariana Louise</h3>
+        <p class="expert-card-text-profession">Caroline SMITH, spécialiste du sommeil chez les chiens.</p>
+        <p class="expert-card-text-profession2">Docteur</p>
+        <hr>
+        <a href="#">Contacter</a>
+      </div>
+    </div>
+  </div>
+  <div class="footer">
+    <div class="footer-logo">
+      <img src="assets/Images/logo-vetisio.png">
+      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation</p>
+    </div>
+    <div class="footer-sommaire">
+      <ul>
+        <li><a href="#">Conseils</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Boutique</a></li>
+        <li><a href="#">Spécialistes</a></li>
+      </ul>
+    </div>
+    <div class="footer-empty">
+        
+    </div>
   </div>
 </body>
 </html>
